--- a/create-user.yml
+++ b/create-user.yml
@@ -5,6 +5,6 @@
   tasks:
     - name: Add User
       win_user:
-        name: ansible
+        name: ansible_test
         password: "@ns1bl3"
         state: present
