--- a/inventarios/windows/gftp_adduser.yml
+++ b/inventarios/windows/gftp_adduser.yml
@@ -1,7 +1,7 @@
 ---
 - name: Running ftp user creation script
   hosts: all
-  gather_facts: yes 
+  gather_facts: no 
   tasks:
 
   - win_shell: C:\scripts_ftp\./CreateUsers.vbs
