--- a/inventarios/linux/lin_dir.yml
+++ b/inventarios/linux/lin_dir.yml
@@ -1,10 +1,11 @@
+---
 - hosts: all
   tasks
-  - name: 
-    find:
-      paths: /var/log
-      size: 10m
-      register: files_matched
-
-  - debug:
+    - name: find files biger than 10Mb 
+      find:
+        paths: /var/log
+        size: 10m
+        register: files_matched
+    
+    - debug:
       msg: "{{ files_matched.files }}"
