--- a/inventarios/linux/lin_dir.yml
+++ b/inventarios/linux/lin_dir.yml
@@ -6,3 +6,7 @@
         paths: /var/log
         patterns: [ '*.log', '*.old' ]
       register: find_result
+    
+    - name: Print version
+      debug:
+        msg: "Find Result: {{ find_result.stdout }}"
