--- a/inventarios/linux/lin_dir.yml
+++ b/inventarios/linux/lin_dir.yml
@@ -8,5 +8,5 @@
       register: find_result
     
     - name: Print version
-      debug: var=find_result
-        msg: "Busqueda completa" 
+      debug:
+        msg: "Busqueda completa {{ find_result }}"
